# SVM-EVM-CHAIN-ABSTRACTION

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  SVM_DEPLOYMENT_STATUS.md  TESTNET_DEPLOYMENT_PLAN.md  data.md  hardhat.config.cjs  package-lock.json  package.json  test-wallet-functionality.js
backend/: auth-server.js  auto-deployer.js  blockchain-integration.js  check-and-fix-hashes.js  fix-api-key-mismatch.js  fix-deployment-hashes.js  jest.config.js  monitor-deployer.js  package-lock.json  package.json  real-transaction-sender.js  server.js  simple-deployer.js  solana-deployer.js  token-nft-handler.js  vercel.json  wallet-deployer.js
backend/config/: chains.js  passport.js
backend/database/: connection.js  indexes.js
backend/middleware/: auth.js  project-auth.js  rateLimiter.js  requestOptimizer.js  responseHelper.js  ultraCache.js  usageTracker.js
backend/models/: APIKeyUsage.js  PaymasterBalance.js  PaymasterPayment.js  Project.js  ProjectAPIKey.js  ProjectPaymaster.js  ProjectTransactionLog.js  ProjectUserActivity.js  User.js
backend/public/: auth-popup.html  dashboard.html  documentation.html  index.html
backend/routes/: analytics.js  auth.js  chains.js  dashboard.js  paymaster.js  project-api-keys.js  projects.js  transactions.js  wallets.js
backend/services/: analyticsService.js  balanceService.js  dashboardService.js  emailService.js  emailValidationService.js  paymasterDeployer.js  paymasterMonitor.js  paymasterService.js  transactionService.js  walletGenerator.js
backend/test/: analytics.test.js  api-key-management.test.js  chain-management.test.js  setup.js
contracts/evm/: BaseWallet.sol  DEPLOYMENT_SUMMARY.md  EntryPoint.sol  Paymaster.sol  TEST_RESULTS.md  Wallet.sol  WalletFactory.sol  hardhat.config.cjs  nexuspay-integration-config.json  package-lock.json  package.json  real-wallet-registry.json
contracts/svm/: Cargo.toml
programs/bridge/: Cargo.toml
programs/bridge/src/: lib.rs
programs/entry_point/: Cargo.toml
programs/entry_point/src/: lib.rs
programs/paymaster/: Cargo.toml
programs/paymaster/src/: lib.rs
programs/wallet/: Cargo.toml
scripts/: deploy-all.js  deploy-free-hosting.js  deploy.js  setup.js  transfer-ownership.js
sdk/: API_REFERENCE.md  DEVELOPER_QUICKSTART.md  README.md  package-lock.json  package.json  test-local.js  test-ngrok.js  tsconfig.json  tsconfig.react.json
sdk/examples/: README.md  check-deployer-balance.js  check-existing-wallets.js  check-funding-addresses.js  nextjs-app.tsx  package.json  paymaster-usage-guide.js  send-funds-test-v2.js  send-funds-test.js  send-real-funds.js  send-receive-tokens.js  simple-usage.js  simple-wallet-app.js  token-nft-demo.js  verify-wallets.js  wallet-infrastructure-demo.js
sdk/src/: index-simple.ts  index.ts
tickets/: README.md  project-overview.md
tickets/api-analytics/: TICKET-007-transaction-tracking.md  TICKET-008-api-restructure.md
tickets/core-features/: TICKET-004-paymaster-wallets.md  TICKET-005-api-key-management.md  TICKET-006-chain-simplification.md
tickets/foundation/: TICKET-001-infrastructure-audit.md  TICKET-002-user-account-system.md  (+1 more)
(+66 files in other folders)
