[workspace]
resolver = "2"
members = [
    "programs/wallet",
    "programs/entry_point", 
    "programs/paymaster",
    "programs/bridge"
]

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
bytemuck = "1.14.0"
borsh = "0.10.3"
thiserror = "1.0.50"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 